--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "devStart": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@sjaakp/leaflet-search": "^1.0.1",
+    "bootstrap": "^5.2.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "leaflet-geosearch": "^3.7.0",
+    "leaflet-search": "^3.0.5",
     "mongoose": "^6.8.1",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
