--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "leaflet-search": "^3.0.5",
     "mongoose": "^6.8.1",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "pug-server": "^0.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
